def/force-app/main/default/objects/Account/fields/Accountalternatenumber__c.field-meta.xml
<CustomField>
    <fullName>Accountalternatenumber__c</fullName>
    <label>Accountalternatenumber</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>