def/force-app/main/default/objects/Account/fields/AccountDescription__c.field-meta.xml
<CustomField>
    <fullName>AccountDescription__c</fullName>
    <label>AccountDescription</label>
    <type>TextArea</type>
</CustomField>