def/force-app/main/default/objects/Account/fields/Accountdetail__c.field-meta.xml
<CustomField>
    <fullName>Accountdetail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accountdetail</label>
    <referenceTo>Account_detail__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>