def/force-app/main/default/objects/Account/fields/Accountformula__c.field-meta.xml
<CustomField>
    <fullName>Accountformula__c</fullName>
    <formula>Name + &apos;formula added&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Accountformula</label>
    <type>Text</type>
</CustomField>