def/force-app/main/default/objects/Account/fields/Accountisvalid__c.field-meta.xml
<CustomField>
    <fullName>Accountisvalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Accountisvalid</label>
    <type>Checkbox</type>
</CustomField>