def/force-app/main/default/objects/Account/fields/AccountMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>AccountMobilePhone__c</fullName>
    <label>AccountMobilePhone</label>
    <type>Phone</type>
</CustomField>