def/force-app/main/default/objects/Account/fields/AccountRegionpicklist__c.field-meta.xml
<CustomField>
    <fullName>AccountRegionpicklist__c</fullName>
    <label>AccountRegionpicklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>