def/force-app/main/default/objects/Account/fields/Accountsegregation__c.field-meta.xml
<CustomField>
    <fullName>Accountsegregation__c</fullName>
    <label>Accountsegregation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>