def/force-app/main/default/objects/Account/fields/Accountserialnumber__c.field-meta.xml
<CustomField>
    <fullName>Accountserialnumber__c</fullName>
    <inlineHelpText>This is a serial number</inlineHelpText>
    <label>Accountserialnumber</label>
    <type>AutoNumber</type>
</CustomField>