def/force-app/main/default/objects/Account/fields/Accountstartdate__c.field-meta.xml
<CustomField>
    <fullName>Accountstartdate__c</fullName>
    <label>Accountstartdate</label>
    <type>Date</type>
</CustomField>