def/force-app/main/default/objects/Account/fields/Backofficecontact__c.field-meta.xml
<CustomField>
    <fullName>Backofficecontact__c</fullName>
    <label>Backofficecontact</label>
    <type>Phone</type>
</CustomField>