def/force-app/main/default/objects/Account/fields/Brand2__c.field-meta.xml
<CustomField>
    <fullName>Brand2__c</fullName>
    <label>Brand2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>