def/force-app/main/default/objects/Account/fields/Brandname__c.field-meta.xml
<CustomField>
    <fullName>Brandname__c</fullName>
    <description>This is a brandname</description>
    <inlineHelpText>This is my help text</inlineHelpText>
    <label>Brandname</label>
    <length>10</length>
    <type>Text</type>
</CustomField>