def/force-app/main/default/objects/Account/fields/Dellaccountnumber__c.field-meta.xml
<CustomField>
    <fullName>Dellaccountnumber__c</fullName>
    <defaultValue>15</defaultValue>
    <label>Dellaccountnumber</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>