def/force-app/main/default/objects/Account/fields/Dellemail__c.field-meta.xml
<CustomField>
    <fullName>Dellemail__c</fullName>
    <label>Dellemail</label>
    <type>Email</type>
</CustomField>