def/force-app/main/default/objects/Account/fields/Delllaptoptypes__c.field-meta.xml
<CustomField>
    <fullName>Delllaptoptypes__c</fullName>
    <label>Delllaptoptypes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dell latitutde 90</fullName>
            </value>
            <value>
                <fullName>Dell Balde server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>