def/force-app/main/default/objects/Account/fields/EMC_AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>EMC_AccountNumber__c</fullName>
    <inlineHelpText>Please enter relevant number</inlineHelpText>
    <label>EMC_AccountNumber</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>