def/force-app/main/default/objects/Account/fields/EMC_Region__c.field-meta.xml
<CustomField>
    <fullName>EMC_Region__c</fullName>
    <label>EMC_Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASIA</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>