def/force-app/main/default/objects/Account/fields/EMC_Region_Countries__c.field-meta.xml
<CustomField>
    <fullName>EMC_Region_Countries__c</fullName>
    <label>EMC-Region_Countries</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EMC_Region__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>Germany</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>