def/force-app/main/default/objects/Account/fields/EMC_servertypes__c.field-meta.xml
<CustomField>
    <fullName>EMC_servertypes__c</fullName>
    <label>EMC_servertypes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blade server</fullName>
            </value>
            <value>
                <fullName>Titatnium server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>