def/force-app/main/default/objects/Account/fields/Grading__c.field-meta.xml
<CustomField>
    <fullName>Grading__c</fullName>
    <formula>IF(AnnualRevenue  &gt;5000,&quot;worth prospecting&quot;,&quot;not worth prospecting&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grading</label>
    <type>Text</type>
</CustomField>