def/force-app/main/default/objects/Account/fields/lastoppcreateddate__c.field-meta.xml
<CustomField>
    <fullName>lastoppcreateddate__c</fullName>
    <label>lastoppcreateddate</label>
    <type>DateTime</type>
</CustomField>