def/force-app/main/default/objects/Account/fields/Masterhotelbill__c.field-meta.xml
<CustomField>
    <fullName>Masterhotelbill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Masterhotelbill</label>
    <referenceTo>Masterhotelbill__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>