def/force-app/main/default/objects/Account/fields/Myformulafieldpercentofannualrevenue__c.field-meta.xml
<CustomField>
    <fullName>Myformulafieldpercentofannualrevenue__c</fullName>
    <formula>TEXT(AnnualRevenue  * 20/100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Myformulafieldpercentofannualrevenue</label>
    <type>Text</type>
</CustomField>