def/force-app/main/default/objects/Account/fields/opportunitycount__c.field-meta.xml
<CustomField>
    <fullName>opportunitycount__c</fullName>
    <label>opportunitycount</label>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>