def/force-app/main/default/objects/Account/fields/registernum__c.field-meta.xml
<CustomField>
    <fullName>registernum__c</fullName>
    <label>registernum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>