def/force-app/main/default/objects/Account/fields/rollupofregionsalesrevenue__c.field-meta.xml
<CustomField>
    <fullName>rollupofregionsalesrevenue__c</fullName>
    <label>rollupofregionsalesrevenue</label>
    <summarizedField>Regionalaccounts__c.Salesrevenue__c</summarizedField>
    <summaryForeignKey>Regionalaccounts__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>