def/force-app/main/default/objects/Account/fields/SIC_code__c.field-meta.xml
<CustomField>
    <fullName>SIC_code__c</fullName>
    <label>SIC code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>