def/force-app/main/default/objects/Account/fields/SubType__c.field-meta.xml
<CustomField>
    <fullName>SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Subtype A</fullName>
            </value>
            <value>
                <fullName>Subtype B</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>