def/force-app/main/default/objects/Account/recordTypes/AccountSales.recordType-meta.xml
<RecordType>
    <fullName>AccountSales</fullName>
    <active>true</active>
    <label>AccountSales</label>
</RecordType>