def/force-app/main/default/objects/Account/recordTypes/Digital_accounts.recordType-meta.xml
<RecordType>
    <fullName>Digital_accounts</fullName>
    <active>true</active>
    <label>Digital Accounts</label>
</RecordType>