def/force-app/main/default/objects/Account/recordTypes/EMC_Retail.recordType-meta.xml
<RecordType>
    <fullName>EMC_Retail</fullName>
    <active>true</active>
    <label>EMC_Retail</label>
</RecordType>