def/force-app/main/default/objects/Account/recordTypes/EMC_wholesale.recordType-meta.xml
<RecordType>
    <fullName>EMC_wholesale</fullName>
    <active>true</active>
    <label>EMC_wholesale</label>
</RecordType>