def/force-app/main/default/objects/Account/recordTypes/HotelAccounts.recordType-meta.xml
<RecordType>
    <fullName>HotelAccounts</fullName>
    <active>true</active>
    <description>These are accounts which belong the hotel sbu</description>
    <label>HotelAccounts</label>
</RecordType>