def/force-app/main/default/objects/Account/recordTypes/Investmentbank.recordType-meta.xml
<RecordType>
    <fullName>Investmentbank</fullName>
    <active>true</active>
    <description>These belong to investmentbanking sbu</description>
    <label>Investmentbank</label>
</RecordType>