def/force-app/main/default/objects/Account/recordTypes/Mall_Recordtype.recordType-meta.xml
<RecordType>
    <fullName>Mall_Recordtype</fullName>
    <active>true</active>
    <label>Mall Recordtype</label>
</RecordType>