def/force-app/main/default/objects/Account/recordTypes/University.recordType-meta.xml
<RecordType>
    <fullName>University</fullName>
    <active>true</active>
    <label>University</label>
</RecordType>