def/force-app/main/default/objects/Account/validationRules/Accountnamecannotbechanedineditmode.validationRule-meta.xml
<ValidationRule>
    <fullName>Accountnamecannotbechanedineditmode</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND( ISCHANGED( Name ) ,NOT( ISNEW())),true,false)</errorConditionFormula>
    <errorMessage>Cannot change account name in edit mode</errorMessage>
</ValidationRule>