def/force-app/main/default/objects/Account/validationRules/Annualrevenuecheck.validationRule-meta.xml
<ValidationRule>
    <fullName>Annualrevenuecheck</fullName>
    <active>true</active>
    <description>AND( NOT(ISNEW()))</description>
    <errorConditionFormula>AnnualRevenue &lt; 100</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Annual revenue should be more than 200000</errorMessage>
</ValidationRule>