def/force-app/main/default/objects/Account/validationRules/Check_field_values.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_field_values</fullName>
    <active>false</active>
    <description>check for changed values</description>
    <errorConditionFormula>AND( NOT(ISNEW()), PRIORVALUE( AnnualRevenue )&gt; AnnualRevenue    )</errorConditionFormula>
    <errorDisplayField>AnnualRevenue</errorDisplayField>
    <errorMessage>Current value of annual revenue should be more than the previous value of annual revenue</errorMessage>
</ValidationRule>