def/force-app/main/default/objects/Account/validationRules/Cityerror.validationRule-meta.xml
<ValidationRule>
    <fullName>Cityerror</fullName>
    <active>false</active>
    <errorConditionFormula>AND( !ISNEW(),  ShippingCity = &apos;xyz&apos; )</errorConditionFormula>
    <errorMessage>i cannot be delivered too</errorMessage>
</ValidationRule>