def/force-app/main/default/objects/Account/validationRules/Validationrandom.validationRule-meta.xml
<ValidationRule>
    <fullName>Validationrandom</fullName>
    <active>true</active>
    <errorConditionFormula>IF(LEN(Name) &lt;2 , true, false)</errorConditionFormula>
    <errorMessage>name cannot be 1 char</errorMessage>
</ValidationRule>