def/force-app/main/default/objects/Account/listViews/Accountswithphonenumber.listView-meta.xml
<ListView>
    <fullName>Accountswithphonenumber</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SLA__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.PHONE1</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Farmer</value>
    </filters>
    <label>Accountswithphonenumber</label>
    <language>en_US</language>
</ListView>