def/force-app/main/default/objects/Account/listViews/Accouts.listView-meta.xml
<ListView>
    <fullName>Accouts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Prospect,Customer - Direct</value>
    </filters>
    <label>Accouts</label>
    <language>en_US</language>
</ListView>