def/force-app/main/default/objects/Account/listViews/AllAccounts1.listView-meta.xml
<ListView>
    <fullName>AllAccounts1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>AllAccounts</label>
</ListView>