def/force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>SLAExpirationDate__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>SLAExpirationDate__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Accounts</label>
    <language>en_US</language>
</ListView>