def/force-app/main/default/objects/Account/listViews/USUASA.listView-meta.xml
<ListView>
    <fullName>USUASA</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>JIGSAW_KEY</columns>
    <filterScope>MyTerritory</filterScope>
    <label>USA</label>
    <language>en_US</language>
</ListView>